[package]
name = "abc453"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc453-a = { alias = "a", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_a" }
abc453-b = { alias = "b", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_b" }
abc453-c = { alias = "c", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_c" }
abc453-d = { alias = "d", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_d" }
abc453-e = { alias = "e", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_e" }
abc453-f = { alias = "f", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_f" }
abc453-g = { alias = "g", problem = "https://atcoder.jp/contests/abc453/tasks/abc453_g" }

[[bin]]
name = "abc453-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc453-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc453-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc453-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc453-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc453-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc453-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4"
itertools = "0.10"

[dev-dependencies]
