[package]
name = "abc455"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc455-a = { alias = "a", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_a" }
abc455-b = { alias = "b", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_b" }
abc455-c = { alias = "c", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_c" }
abc455-d = { alias = "d", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_d" }
abc455-e = { alias = "e", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_e" }
abc455-f = { alias = "f", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_f" }
abc455-g = { alias = "g", problem = "https://atcoder.jp/contests/abc455/tasks/abc455_g" }

[[bin]]
name = "abc455-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc455-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc455-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc455-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc455-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc455-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc455-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4"
itertools = "0.10"

[dev-dependencies]
