[package]
name = "abc456"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc456-a = { alias = "a", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_a" }
abc456-b = { alias = "b", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_b" }
abc456-c = { alias = "c", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_c" }
abc456-d = { alias = "d", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_d" }
abc456-e = { alias = "e", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_e" }
abc456-f = { alias = "f", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_f" }
abc456-g = { alias = "g", problem = "https://atcoder.jp/contests/abc456/tasks/abc456_g" }

[[bin]]
name = "abc456-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc456-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc456-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc456-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc456-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc456-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc456-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4"

[dev-dependencies]
