[package]
name = "abc457"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc457-a = { alias = "a", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_a" }
abc457-b = { alias = "b", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_b" }
abc457-c = { alias = "c", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_c" }
abc457-d = { alias = "d", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_d" }
abc457-e = { alias = "e", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_e" }
abc457-f = { alias = "f", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_f" }
abc457-g = { alias = "g", problem = "https://atcoder.jp/contests/abc457/tasks/abc457_g" }

[[bin]]
name = "abc457-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc457-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc457-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc457-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc457-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc457-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc457-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4"

[dev-dependencies]
proconio = "0.4"
