[package]
name = "abc458"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc458-a = { alias = "a", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_a" }
abc458-b = { alias = "b", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_b" }
abc458-c = { alias = "c", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_c" }
abc458-d = { alias = "d", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_d" }
abc458-e = { alias = "e", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_e" }
abc458-f = { alias = "f", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_f" }
abc458-g = { alias = "g", problem = "https://atcoder.jp/contests/abc458/tasks/abc458_g" }

[[bin]]
name = "abc458-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc458-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc458-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc458-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc458-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc458-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc458-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4"
itertools = "0.10"

[dev-dependencies]
